--- a/portfolio/src/components/projets/Section.css
+++ b/portfolio/src/components/projets/Section.css
@@ -17,7 +17,6 @@
   margin-top: 50px;
 }
 
-
 /* --- Text Block Styling --- */
 
 .text-block {
@@ -55,13 +54,20 @@
   aspect-ratio: 16 / 9;
   background-color: #e9e9e9;
   margin-bottom: 15px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .image-card .image-placeholder img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  display: block;
+}
+
+.image-card .image-placeholder video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
   display: block;
 }
 
